--- a/css/style.css
+++ b/css/style.css
@@ -160,9 +160,9 @@ header{
 
 /* Get an estimate */
 .get-an-estimate{
-   padding: 135px 0 110px;
+   padding: 150px 0 125px;
    background-color: var(--color-primary);
-   clip-path: polygon(0 21%, 100% 0, 100% 100%, 0 79%);
+   clip-path: polygon(0 19.5%, 100% 0, 100% 100%, 0 81.5%);
    /* transform: translatey(-85px); */
    margin-top: -85px;
 }
@@ -245,9 +245,9 @@ header{
 
 /* Blog articles */
 .blog{
-   padding: 140px 0;
+   padding: 200px 0;
    background-color: var(--color-primary);
-   clip-path: polygon(0% 11%, 100% 0%, 100% 100%, 0% 89%);
+   clip-path: polygon(0% 9.5%, 100% 0%, 100% 100%, 0% 90.5%);
    /* transform: translatey(-247px); */
    margin-top: -85px;
 }
@@ -336,7 +336,7 @@ header{
 
 /* Service */
 .service{
-   padding: 70px 0;
+   padding: 90px 0;
 }
 .service-container{
    display: grid;
@@ -451,7 +451,7 @@ header{
    display: grid;
    grid-template-columns: 50% 50%;
    align-items: center;
-   margin-top: 90px;
+   margin-top: 100px;
    border-top: 0.1px solid var(--color-grey);
 }
 .send-message .booking{
